--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "06-restserver",
   "version": "0.0.1",
-  "description": "",
+  "description": "* Clone the repository git clone https://github.com/peamarelle/node-06-restserver.git",
   "main": "index.js",
   "scripts": {
     "dev": "npx nodemon src/index",
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3"
   },
   "devDependencies": {
